z-index fix

--- a/assets/style/scss/_widgets.scss
+++ b/assets/style/scss/_widgets.scss
@@ -1938,6 +1938,8 @@
 	
 	.center {
 		.holdcenter{
+			z-index: 90;
+			
 			.box-headline {
 				margin: auto!important;
 			}
